--- a/HardHat/package.json
+++ b/HardHat/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "chai-as-promised": "^8.0.1",
     "hardhat": "^2.22.18"
   }
 }
