--- a/HardHatTutorial/package.json
+++ b/HardHatTutorial/package.json
@@ -10,7 +10,9 @@
     "test": "npx hardhat test",
     "compile": "npx hardhat compile",
     "clean": "npx hardhat clean",
-    "watch":"npm run test && npx hardhat watch test"
+    "watch": "npm run test && npx hardhat watch test",
+    "deployLocal": "npx hardhat ignition deploy ./ignition/modules/prime.js",
+    "deploySepolia": "npx hardhat ignition deploy --network sepolia ./ignition/modules/prime.js"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
