chore(ERC721): scaffolding
interface definition mainly

--- a/ERC721/package.json
+++ b/ERC721/package.json
@@ -1,7 +1,18 @@
 {
-  "name": "hardhat-project",
+  "name": "ERC721",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.18"
+    "chai-as-promised": "^8.0.1",
+    "hardhat": "^2.22.18",
+    "hardhat-watcher": "^2.5.0"
+  },
+  "scripts": {
+    "test": "npx hardhat test",
+    "compile": "npx hardhat compile",
+    "clean": "npx hardhat clean",
+    "watch": "npm run test && npx hardhat watch test",
+    "deployLocal": "npx hardhat ignition deploy ./ignition/modules/ERC721.ts",
+    "deploySepolia": "npx hardhat ignition deploy --network sepolia --verify ./ignition/modules/ERC721.ts",
+    "coverage": "npx hardhat coverage"
   }
 }
