--- a/ERC721/package.json
+++ b/ERC721/package.json
@@ -2,6 +2,7 @@
   "name": "ERC721",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@types/chai-as-promised": "^8.0.1",
     "chai-as-promised": "^8.0.1",
     "hardhat": "^2.22.18",
     "hardhat-watcher": "^2.5.0"
