feat(ERC721): contract creation
Finally found a way out to cicumvent crappy hardhat's type system to
deduce the contract type in tests...

--- a/ERC721/.gitignore
+++ b/ERC721/.gitignore
@@ -17,3 +17,6 @@ ignition/deployments/chain-31337
 
 # Hardhat Ignition default folder for deployments against sepolia
 ignition/deployments/chain-11155111
+
+# destination directory of transpiled files for tsc manual invocations
+/dist
